# simple_chatbot

./: .gitignore  pyproject.toml  simple_chatbot.ipynb
stories/: The Case of the Midnight Caller.md  The Enigma of the Emerald Pendant.md  The Mystery of the Vanishing Violin.md
