[tool.poetry]
name = "simple-chatbot"
version = "0.1.0"
description = "A simple chatbot for visualization and training purposes"
authors = ["Roberto Álvarez <roberto.alvarez@daredata.engineering>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.17"
llama-index = "^0.10.34"
langchain-openai = "^0.1.6"
python-dotenv = "^1.0.1"
llama-index-embeddings-huggingface = "^0.2.0"
langchain-google-vertexai = "^1.0.3"
scikit-learn = "^1.4.2"
langchain-experimental = "^0.0.57"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
